2004-12-17 Bart Hakvoort  <gparted@users.sf.net>

	* src/GParted_Core.cc: Only peform partable re-read check if at least one partition on a device is mounted.

2004-12-15 Bart Hakvoort  <gparted@users.sf.net>

	* some minor internal codechanges, which should save a few bytes of mem here and there.
	  (i was in a nitpicking mood :P )

2004-12-15 Bart Hakvoort  <gparted@users.sf.net>

	* Gparted_Core::get_fs now returns a const reference.
	* in copy and resizedialog filesystems with MAX set now have a max size of MAX - one cylinder .

2004-12-15 Bart Hakvoort  <gparted@users.sf.net>

	* (all filesystem classes): fixed bug with thousand separator (#161362).
	* ext2.cc,
	  ext3.cc: fixed bug with incorrect used/unused space after copying.

2004-12-15 Bart Hakvoort  <gparted@users.sf.net>

	* Added dialog (accessable from 'gparted' menu) which shows supported operations for the various filesystems.
	  I plan to put some more info in it, like what is missing etc..

2004-12-15 Bart Hakvoort  <gparted@users.sf.net>

	* src/Dialog_Partition_Copy: fixed small error with incorrect display of used space and did some cleanups.

2004-12-15 Bart Hakvoort  <gparted@users.sf.net>

	* Refined checks for functionality a bit. e.g. even if a filesystem can't be read, it's still possible to grow it 
	  (but shrinking gets disabled). Also removed that stupid grow_only flag from Utils.h and reordered Win_GParted::Set_Valid_Operations()

2004-12-14 Bart Hakvoort  <gparted@users.sf.net>

	* added support for jfs (create, copy, grow) and hfs (create, copy)
	* fixed a bug in copying xfs filesystems.
	* fixed a number of small bugs/annoying issues.
	* I guess this also means gparted now supports more filesystems then any other (OSS) partitionmanager.. (lekker belangrijk ;) )

2004-12-13 Bart Hakvoort  <gparted@users.sf.net>

	* Added support for xfs. this means creating and growing xfs filesystems. Shrinking requires some hacking with dump_xfs etc..
	  i'll add that at a later point. :)
