@@ -1,5 +1,11 @@
 2004-12-17 Bart Hakvoort  <gparted@users.sf.net>
 
+	* src/Win_GParted.cc: fixed bug with enabling/disabling 'copy' in menus.
+	* src/ext2.cc,
+	  src/ext3.cc: added missing check while deciding to disable/enable copy feature.
+
+2004-12-17 Bart Hakvoort  <gparted@users.sf.net>
+
 	* src/GParted_Core.cc: Only peform partable re-read check if at least one partition on a device is mounted.
 
 2004-12-15 Bart Hakvoort  <gparted@users.sf.net>
